# launch-deal-flow-agent

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOY.md  Makefile  Procfile  README.md  pyproject.toml  railway.json
cron/: crontab.sample
reports/: dashboard-latest.html
src/dealflow_agent/: __init__.py  analyst.py  config.py  dashboard.py  emailer.py  metrics.py  models.py  outbound.py  report.py  run_daily.py  scoring.py  send_test_email.py  source_edgar.py  source_edgar_fulltext.py  source_github.py  source_news.py  source_yc.py  sources.py  storage.py  web.py
