[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "launch-deal-flow-agent"
version = "0.1.0"
description = "MVP deal-flow research agent for LAUNCH tracking Sequoia, a16z, and YC signals."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
